--- a/my-app-web-admin/pom.xml
+++ b/my-app-web-admin/pom.xml
@@ -14,6 +14,7 @@
     <packaging>war</packaging>
 
     <dependencies>
+        <!-- Project Begin ==================================================================== -->
         <dependency>
             <groupId>com.yudi</groupId>
             <artifactId>my-app-commons</artifactId>
@@ -24,6 +25,9 @@
             <artifactId>my-app-domain</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
+        <!-- Project end-->
+
+        <!-- Spring Begin ====================================================================== -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
@@ -38,17 +42,15 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-aspects</artifactId>
         </dependency>
-        <!-- jdbc 事务控制 -->
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-jdbc</artifactId>
-        </dependency>
+        <!-- Spring end -->
+
         <!-- servlet ==================================================================== -->
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <scope>provided</scope>
         </dependency>
+
         <!-- jstl标签类 ================================================================= -->
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -62,17 +64,21 @@
             <groupId>taglibs</groupId>
             <artifactId>standard</artifactId>
         </dependency>
+
         <!-- mybatis ==================================================================== -->
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
-            <version>${mybatis.version}</version>
         </dependency>
         <!-- mybatis 整合 spring-->
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis-spring</artifactId>
-            <version>${mybatis-spring.version}</version>
+        </dependency>
+        <!-- jdbc 事务控制 -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
         </dependency>
 
         <!-- 数据库驱动 ================================================================== -->
@@ -87,12 +93,12 @@
             <groupId>commons-dbcp</groupId>
             <artifactId>commons-dbcp</artifactId>
         </dependency>
-        <!-- c3p0 -->
         <dependency>
-            <groupId>com.mchange</groupId>
-            <artifactId>c3p0</artifactId>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
         </dependency>
-        <!-- 分页插件 pageHelper -->
+
+        <!-- 分页插件 pageHelper ========================================================== -->
         <dependency>
             <groupId>com.github.pagehelper</groupId>
             <artifactId>pagehelper</artifactId>
