--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
         <commons-io.version>2.6</commons-io.version>
         <hibernate-validator.version>4.3.2.Final</hibernate-validator.version>
         <pagehelper.version>5.1.4</pagehelper.version>
+        <alibaba-druid.version>1.1.6</alibaba-druid.version>
 
     </properties>
 
@@ -122,6 +123,13 @@
                 <artifactId>c3p0</artifactId>
                 <version>${c3p0.version}</version>
             </dependency>
+            <!-- alibaba:druid -->
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>druid</artifactId>
+                <version>${alibaba-druid.version}</version>
+            </dependency>
+
 
             <!-- jstl标签类 ================================================================= -->
             <dependency>
