--- a/my-app-web-admin/pom.xml
+++ b/my-app-web-admin/pom.xml
@@ -115,6 +115,10 @@
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
 
 
     </dependencies>
