修改使用密码加密方式进行登录验证

--- a/my-app-commons/pom.xml
+++ b/my-app-commons/pom.xml
@@ -45,5 +45,11 @@
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
         </dependency>
+        <!-- Commons Begin 使用StringUtils.isBlank()方法来判断字符串是否为空 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
+        <!-- Commons End -->
     </dependencies>
 </project>
