--- a/my-app-commons/pom.xml
+++ b/my-app-commons/pom.xml
@@ -40,11 +40,24 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
-        <!-- fastJSON ==================================================================== -->
+        <!-- jackson ===================================================================== -->
+        <!-- Json Begin -->
         <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>${jackson.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <!-- Json End -->
         <!-- Commons Begin 使用StringUtils.isBlank()方法来判断字符串是否为空 -->
         <dependency>
             <groupId>org.apache.commons</groupId>
