--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
         <commons-dbcp.version>1.4</commons-dbcp.version>
         <servlet-api.version>3.1.0</servlet-api.version>
         <jsp-api.version>2.3.1</jsp-api.version>
-        <fastjson.version>1.2.47</fastjson.version>
+        <jackson.version>2.9.5</jackson.version>
         <log4j.version>1.2.17</log4j.version>
         <slf4j.version>1.7.25</slf4j.version>
         <commons-fileupload.version>1.3.3</commons-fileupload.version>
@@ -150,12 +150,24 @@
                 <scope>provided</scope>
             </dependency>
 
-            <!-- fastJSON ==================================================================== -->
+            <!-- jackson ===================================================================== -->
+            <!-- Json Begin -->
             <dependency>
-                <groupId>com.alibaba</groupId>
-                <artifactId>fastjson</artifactId>
-                <version>${fastjson.version}</version>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-core</artifactId>
+                <version>${jackson.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-annotations</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
+            <!-- Json End -->
 
             <!-- JSR303 ===================================================================== -->
             <!--  Spring表单标签 JSR303验证 -->
